--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,70 @@
 @import "tailwindcss";
 
 @theme {
-    --color-ui-background: #191919;
+    --color-ui-background: #EDEDED;
+    --tp-corner-position: 2px;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root{
+        --color-ui-background: #191919;
+    }
+}
+
+@layer base {
+
+    @font-face {
+        font-family: 'Ruda';
+        font-style: normal;
+        font-weight: 400;
+        src: url('../assets/fonts/Ruda-VariableFont_wght.ttf') format("truetype-variations");
+        font-display: swap;
+    }
+
+    .top-heroes {
+        --default-font-family: 'Ruda', sans-serif;
+        --color-ui-background: transparent; 
+    }
+}
+
+@layer components {
+    .link-banner {
+        background-image: url('../assets/top-heroes/background.png');
+        font-size: clamp(1rem, -0.875rem + 8.333vw, 2.5rem);
+
+        @apply bg-contain bg-center flex justify-center items-center gap-4 py-4 px-8 text-[#FFFCE3] font-bold;
+        text-shadow: 4px 4px #9c4c30 ;
+
+        .icon-img {
+            width: clamp(1.5rem, -0.875rem + 8.333vw, 2.125rem);
+            height: auto;
+            margin-bottom: -0.5rem;
+        }
+    }
+
+    .tp-corner {
+        width: clamp(1.5rem, -0.875rem + 8.333vw, 2.125rem);
+    }
+
+
+    .tp-corner-top-right {
+        @apply absolute;
+        top: calc(-1 * var(--tp-corner-position));
+        right: calc(-1 * var(--tp-corner-position));
+    }
+    .tp-corner-bottom-left {
+        @apply absolute rotate-180;
+        bottom: calc(-1 * var(--tp-corner-position));
+        left: calc(-1 * var(--tp-corner-position));
+    }
+    .tp-corner-bottom-right {
+        @apply absolute rotate-90;
+        bottom: calc(-1 * var(--tp-corner-position));
+        right: calc(-1 * var(--tp-corner-position));
+    }    
+    .tp-corner-top-left {
+        @apply absolute rotate-270;
+        top: calc(-1 * var(--tp-corner-position));
+        left: calc(-1 * var(--tp-corner-position));
+    }
 }
