--- a/src/output.css
+++ b/src/output.css
@@ -6,7 +6,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-gray-800: oklch(0.278 0.033 256.848);
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-sm: 0.875rem;
@@ -15,6 +14,7 @@
     --text-6xl--line-height: 1;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
+    --font-weight-bold: 700;
     --default-font-family: var(--font-sans);
     --default-font-feature-settings: var(--font-sans--font-feature-settings);
     --default-font-variation-settings: var(
@@ -27,7 +27,8 @@
     --default-mono-font-variation-settings: var(
       --font-mono--font-variation-settings
     );
-    --color-ui-background: #191919;
+    --color-ui-background: #EDEDED;
+    --tp-corner-position: 2px;
   }
 }
 @layer base {
@@ -172,8 +173,20 @@
   }
 }
 @layer utilities {
-  .static {
-    position: static;
+  .pointer-events-auto {
+    pointer-events: auto;
+  }
+  .visible {
+    visibility: visible;
+  }
+  .absolute {
+    position: absolute;
+  }
+  .relative {
+    position: relative;
+  }
+  .inset-0 {
+    inset: calc(var(--spacing) * 0);
   }
   .flex {
     display: flex;
@@ -189,6 +202,9 @@
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .transform {
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
   .resize {
     resize: both;
@@ -257,16 +273,103 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
-  .dark\:bg-gray-800 {
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--color-gray-800);
-    }
-  }
   .dark\:text-white {
     @media (prefers-color-scheme: dark) {
       color: var(--color-white);
     }
   }
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-ui-background: #191919;
+  }
+}
+@layer base {
+  @font-face {
+    font-family: 'Ruda';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../assets/fonts/Ruda-VariableFont_wght.ttf') format("truetype-variations");
+    font-display: swap;
+  }
+  .top-heroes {
+    --default-font-family: 'Ruda', sans-serif;
+    --color-ui-background: transparent;
+  }
+}
+@layer components {
+  .link-banner {
+    background-image: url('../assets/top-heroes/background.png');
+    font-size: clamp(1rem, -0.875rem + 8.333vw, 2.5rem);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: calc(var(--spacing) * 4);
+    background-size: contain;
+    background-position: center;
+    padding-inline: calc(var(--spacing) * 8);
+    padding-block: calc(var(--spacing) * 4);
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
+    color: #FFFCE3;
+    text-shadow: 4px 4px #9c4c30;
+    .icon-img {
+      width: clamp(1.5rem, -0.875rem + 8.333vw, 2.125rem);
+      height: auto;
+      margin-bottom: -0.5rem;
+    }
+  }
+  .tp-corner {
+    width: clamp(1.5rem, -0.875rem + 8.333vw, 2.125rem);
+  }
+  .tp-corner-top-right {
+    position: absolute;
+    top: calc(-1 * var(--tp-corner-position));
+    right: calc(-1 * var(--tp-corner-position));
+  }
+  .tp-corner-bottom-left {
+    position: absolute;
+    rotate: 180deg;
+    bottom: calc(-1 * var(--tp-corner-position));
+    left: calc(-1 * var(--tp-corner-position));
+  }
+  .tp-corner-bottom-right {
+    position: absolute;
+    rotate: 90deg;
+    bottom: calc(-1 * var(--tp-corner-position));
+    right: calc(-1 * var(--tp-corner-position));
+  }
+  .tp-corner-top-left {
+    position: absolute;
+    rotate: 270deg;
+    top: calc(-1 * var(--tp-corner-position));
+    left: calc(-1 * var(--tp-corner-position));
+  }
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateX(0);
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateY(0);
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateZ(0);
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: skewX(0);
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: skewY(0);
 }
 @property --tw-border-style {
   syntax: "*";
